convert all images to JPEG

--- a/a/auschwitz-death-books/index.html
+++ b/a/auschwitz-death-books/index.html
@@ -131,7 +131,7 @@
 				Furthermore, these volumes contain a considerable amount of very young and very old people, among them babies, even infants born in Auschwitz, and geriatrics 80 years and older. If we follow the orthodox narrative, such individuals should never have been admitted to the camp, but should have been slated for immediate gassing upon arrival (or birth). But that is evidently not what happened. The second table shows the relative representation of various age groups among registered Auschwitz inmates who died in that camp and found themselves duly documented as such.
 			</p>
 			<figure>
-				<img class="img-thumbnail" src="/_assets/img/AuschwitzDeathBooks.png" alt="Monthly deaths at Auschwitz, Jewish vs. others." height="832" width="1871" />
+				<img class="img-thumbnail" src="/_assets/img/AuschwitzDeathBooks.jpg" alt="Monthly deaths at Auschwitz, Jewish vs. others." height="832" width="1871" />
 				<figcaption>
 					Monthly deaths at Auschwitz, Jewish vs. others.
 				</figcaption>
