--- a/a/auschwitz-main-camp/index.html
+++ b/a/auschwitz-main-camp/index.html
@@ -28,7 +28,7 @@
 				The first extant document of this camp, dated 30 April 1940, is a cost estimate totaling 2 million reichsmark to convert the former Polish barracks into a camp. It includes fences, walls, watchtowers, but also an inmate kitchen, a laundry, a water-supply system, an inmate bath, a delousing facility, and of course additional lodging buildings. Less than a month later, the <a href="/t/topf-sohne-j-a/index.html">Topf Company</a> submitted an estimate for a double-muffle cremation furnace, to be built in the camp&rsquo;s former munitions bunker, to be converted into a crematorium (later called Crematorium I, or Old Crematorium). This furnace became operational on 15 August 1940, with two more following in March 1941 and March 1942, respectively. Many construction reports subsequently documented the steady expansion and improvement of the camp.
 			</p>
 			<figure>
-				<img class="img-thumbnail" src="/_assets/img/AuschwitzMainCamp.png" alt="Auschwitz main camp" height="332" width="350" />
+				<img class="img-thumbnail" src="/_assets/img/AuschwitzMainCamp.jpg" alt="Auschwitz main camp" height="332" width="350" />
 				<figcaption>
 					Auschwitz I/Main Camp (concentration camp). Map according to the information brochure of the Auschwitz State Museum in 1991.<br />
 					Block 1 &mdash; 28: inmate barracks; basement of Block 11: detention cells, location of the claimed first homicidal gassing, September 1941.<br />
@@ -119,7 +119,7 @@
 				<li>Furthermore, the SS added a feature that would have been essential for a homicidal gas chamber, but which did not exist originally: a door allowing access without having to walk through rooms filled with corpses. The entrance way they added features a sheet-metal-lined door with a peephole that leads into an air-lock. Such an air-lock is crucial for an air-raid shelter, but would be useless, in fact obstructive, for a homicidal gas chamber.</li>
 			</ul>
 			<figure>
-				<img class="img-thumbnail" src="/_assets/img/AuschwitzKI-1944.png" alt="Auschwitz 1944" height="527" width="700" />
+				<img class="img-thumbnail" src="/_assets/img/AuschwitzKI-1944.jpg" alt="Auschwitz 1944" height="527" width="700" />
 				<figcaption>
 					Floor plan of Crematorium I Auschwitz I Main Camp after conversion to air-raid shelter in the fall of 1944.<br />
 					1: added entry door with air lock (<q>Schleuse</q>); 2: surgery room; 3: former washroom, now air-raid shelter with toilets; 4: air-raid shelter rooms; 5: former furnace room. Note that the swinging door, still shown in this plan, was removed and walled up during the conversion.
@@ -141,7 +141,7 @@
 				This grand plan of deception was and still is called to this day a <q>reconstruction</q> of the <q>original gas chamber,</q> although there never was an original, and the mistakes made during the effort clearly qualify it as a forgery rather than a <q>reconstruction.</q> Until the turn of the millennium, the Museum mendaciously told millions of visitors that this building was in its original state, although they knew better. Only later, beginning in the 1990s, did they admit having made some <q>mistakes</q> during their <q>reconstruction.</q>
 			</p>
 			<figure>
-				<img class="img-thumbnail" src="/_assets/img/AuschwitzKI-1947.png" alt="Auschwitz 1947" height="452" width="700" />
+				<img class="img-thumbnail" src="/_assets/img/AuschwitzKI-1947.jpg" alt="Auschwitz 1947" height="452" width="700" />
 				<figcaption>
 					Floor plan of Crematorium I in Auschwitz I/Main Camp today, after the Polish manipulations of 1947.<br />
 					1: <q>Gas chamber</q>; 2: fake Zyklon-B introduction holes, wrongly spread out to be somewhat evenly distributed in today&rsquo;s room; 3: toilet drains of former air-raid shelter; 4: former partition between morgue and washroom; 5: ventilation chimney of air-raid shelter; 6: air-raid shelter&rsquo;s additional entry door and air lock, until the end of the 20th Century wrongly referred to by the Museum as victim entryway; 7: urn room, 8: coke; 9: reconstructed furnaces; 10: newly broken-through entry way without any door connecting the alleged <q>gas chamber</q> with the furnace room; dashed line: original location of swinging door; 11: remains of the old furnace; 12: fake chimney.
