--- a/b/birkenau/index.html
+++ b/b/birkenau/index.html
@@ -37,9 +37,9 @@
 				Since Auschwitz had in the meantime become the location of a major industrial project &mdash; the <a href="/b/buna/index.html">BUNA</a> coal-liquefaction plant of the <a href="/i/i-g-farbenindustrie-ag/index.html">I.G. Farbenindustrie</a> near the town of <a href="/m/monowitz/index.html">Monowitz</a> &mdash; the Birkenau Camp&rsquo;s labor-supply focus shifted away from the <i>Generalplan Ost</i> to the local industrial enterprises. With no Soviet PoWs coming any time soon, the new Birkenau Camp was then slated to be filled with Jews deported from various European countries.
 			</p>
 			<figure>
-				<img class="img-thumbnail" src="/_assets/img/BirkenauMapMay1942.png" alt="Birkenau Map, May1942" height="1109" width="1417" /> <br>
-				<img class="img-thumbnail" src="/_assets/img/BirkenauMapSept1942.png" alt="Birkenau Map, September 1942" height="1109" width="1417" /> <br>
-				<img class="img-thumbnail" src="/_assets/img/BirkenauMap1944.png" alt="Birkenau Map, Summer 1944" height="1220" width="1231" />
+				<img class="img-thumbnail" src="/_assets/img/BirkenauMapMay1942.jpg" alt="Birkenau Map, May1942" height="1109" width="1417" /> <br>
+				<img class="img-thumbnail" src="/_assets/img/BirkenauMapSept1942.jpg" alt="Birkenau Map, September 1942" height="1109" width="1417" /> <br>
+				<img class="img-thumbnail" src="/_assets/img/BirkenauMap1944.jpg" alt="Birkenau Map, Summer 1944" height="1220" width="1231" />
 				<figcaption>
 					Auschwitz Birkenau in summer 1944<br />
 					The shaded buildings still exist today, some of them, however, only in the form of ruins or foundations (Crematoria II-V), the rest having been torn down by Polish civilians for building materials and fuel after the war. According to the information brochure of the Auschwitz State Museum, 1991.<br />
