--- a/b/bock-richard/index.html
+++ b/b/bock-richard/index.html
@@ -30,7 +30,7 @@
 							(Courtesy of French revisionist cartoon artist Konk) </td>
 						<td>
 						<figure>
-							<img class="img-thumbnail" src="/_assets/img/Boeck1.png" alt="The victims were pushed into the gas chamber" height="154" width="212" />
+							<img class="img-thumbnail" src="/_assets/img/Boeck1.jpg" alt="The victims were pushed into the gas chamber" height="154" width="212" />
 							<figcaption>
 								The victims were pushed into the gas chamber.
 							</figcaption>
@@ -40,7 +40,7 @@
 					<tr>
 						<td>
 						<figure>
-							<img class="img-thumbnail" src="/_assets/img/Boeck2.png" alt="The door was closed and Zyklon B introduced" height="166" width="211" />
+							<img class="img-thumbnail" src="/_assets/img/Boeck2.jpg" alt="The door was closed and Zyklon B introduced" height="166" width="211" />
 							<figcaption>
 								The door was closed and Zyklon B introduced.
 							</figcaption>
@@ -48,7 +48,7 @@
 						</td>
 						<td>
 						<figure>
-							<img class="img-thumbnail" src="/_assets/img/Boeck3.png" alt="There was a wait of a few minutes" height="166" width="211" />
+							<img class="img-thumbnail" src="/_assets/img/Boeck3.jpg" alt="There was a wait of a few minutes" height="166" width="211" />
 							<figcaption>
 								There was a wait of a few minutes.
 							</figcaption>
@@ -58,7 +58,7 @@
 					<tr>
 						<td>
 						<figure>
-							<img class="img-thumbnail" src="/_assets/img/Boeck4.png" alt="And when the door was opened" height="145" width="210" />
+							<img class="img-thumbnail" src="/_assets/img/Boeck4.jpg" alt="And when the door was opened" height="145" width="210" />
 							<figcaption>
 								And when the door was opened:<br />
 								<q>I was surprised that the inmate commando assigned to remove the bodies entered the chamber without gas masks, although this blue vapor floated over the corpses, from which I assumed that it was a gas.</q>
@@ -67,7 +67,7 @@
 						</td>
 						<td>
 						<figure>
-							<img class="img-thumbnail" src="/_assets/img/Boeck5.png" alt="That is impossible!" height="174" width="211" />
+							<img class="img-thumbnail" src="/_assets/img/Boeck5.jpg" alt="That is impossible!" height="174" width="211" />
 							<figcaption>
 								<b>THAT IS IMPOSSIBLE!</b><br />
 								Everyone would have been dead! A room filled with Zyklon B gas has to be ventilated for hours (the manufacturer recommends 20 hours!) &hellip; Even with gas masks it would not have been possible.
