--- a/c/crematoria/index.html
+++ b/c/crematoria/index.html
@@ -31,7 +31,7 @@
 				Energetically speaking, the worst way of cremating corpses is on a pyre on the flat ground, because much of the heat gets lost due to radiation and convection. A better way is the incineration in relatively <i>narrow</i> trenches, where the earthen walls retain and reflect heat, and convection losses are limited (this advantage is lost when a pit is much wider than deep). Better still is combustion in so-called field furnaces, built in soil pits with stony walls and a ceiling of rocks. But all these methods are far surpassed by modern cremation furnaces. Such facilities not only reduce heat losses due to convection and radiation by encasing the combustion chamber with insulated material, but most of them also recover heat from the exhaust gases by way of heat exchangers or recuperators. The highest efficiency is reached by continuously operating <a href="/f/furnace/index.html">furnaces</a> used for incinerating animal carcasses and slaughter offal.
 			</p>
 			<figure>
-				<img class="img-thumbnail" src="/_assets/img/CremaStatsGermany.png" alt="Cremation History, Germany, 1880-1939" height="1543" width="2385" />
+				<img class="img-thumbnail" src="/_assets/img/CremaStatsGermany.jpg" alt="Cremation History, Germany, 1880-1939" height="1543" width="2385" />
 				<figcaption>
 					Data from <a href="/bibliography/index.html#Mattogno_Deana">Mattogno/Deana</a>, p. 139.
 				</figcaption>
