--- a/d/diesel-exhaust/index.html
+++ b/d/diesel-exhaust/index.html
@@ -22,7 +22,7 @@
 			<audio controls src="/_assets/audio/DieselExhaust.mp3">
 			</audio>
 			<figure>
-				<img class="img-thumbnail" src="/_assets/img/ICE-CO-Contents.png" alt="Carbon-monoxide content of exhaust gases" height="1913" width="2834" />
+				<img class="img-thumbnail" src="/_assets/img/ICE-CO-Contents.jpg" alt="Carbon-monoxide content of exhaust gases" height="1913" width="2834" />
 				<figcaption>
 					Carbon-monoxide content of exhaust gases from spark engines and diesel engines as a function of engine load (air-/fuel ratio)
 				</figcaption>
