--- a/f/fumigation-gas-chamber/index.html
+++ b/f/fumigation-gas-chamber/index.html
@@ -74,7 +74,7 @@
 				Furthermore, since clothes to be fumigated were typically brought into these chambers hanging on metal racks on wheels, which might bang against the door, the peepholes were to have a metal protection grille on the inside to protect the glass pane from getting cracked by the metal racks. Multiple doors found in Auschwitz used to enclose fumigation chambers had such grille-protected peepholes. (See the entry in <a href="/g/gastight-doors/index.html">gastight doors</a>.)
 			</p>
 			<figure>
-				<img class="img-thumbnail" src="/_assets/img/DegeschChamber.png" alt="Degesch Standard Zyklon-B Fumigation Chamber" height="706" width="978" />
+				<img class="img-thumbnail" src="/_assets/img/DegeschChamber.jpg" alt="Degesch Standard Zyklon-B Fumigation Chamber" height="706" width="978" />
 				<figcaption>
 					Longitudinal section through a <a href="/d/degesch/index.html">Degesch</a> Normal Gas Chamber with circulation layout (<a href="/bibliography/index.html#Gassner">Gassner 1943</a>).
 				</figcaption>
