--- a/g/gas-chamber/index.html
+++ b/g/gas-chamber/index.html
@@ -30,7 +30,7 @@
 				<li>Execution gas chambers, subdivided into those for animals, used by veterinaries and animal-control units, and <a href="/h/homicidal-gas-chambers/index.html">homicidal gas chambers</a>, used for the legal implementation of capital punishment or for illegal murder.</li>
 			</ul>
 			<figure>
-				<img class="img-thumbnail" src="/_assets/img/DegeschAd.png" alt="Degesch Ad" height="333" width="505" />
+				<img class="img-thumbnail" src="/_assets/img/DegeschAd.jpg" alt="Degesch Ad" height="333" width="505" />
 				<figcaption>
 					Typical advertisement of the firm Degesch for the use of their various fumigation gases in <q>Gaskammern</q> = <q>gas chambers</q> for disinfestation. (<i>Der praktische Desinfektor,</i> Vol. 33, No. 2, 1941, inside cover.)
 				</figcaption>
