--- a/m/majdanek/index.html
+++ b/m/majdanek/index.html
@@ -37,7 +37,7 @@
 				Construction work began in October 1941 using Jewish-Polish and Soviet PoWs. The camp was huge. The first layout provided for ten camp sectors with a total of 236 barracks, 207 of them for lodging inmates. These plans changed repeatedly over time, and in the end, of eight planned camp sectors, only five were finalized, with just over a hundred barracks. One reason for the constant changes in plans was that the camp&rsquo;s planned purpose changed as well. It started out as a PoW camp, received dual-purpose status of both PoW camp and concentration camp in April 1942, and was converted to a mere concentration camp a year later.
 			</p>
 			<figure>
-				<img class="img-thumbnail" src="/_assets/img/MajdanekCampMap.png" alt="Majdanek, Camp Map" height="1379" width="2127" />
+				<img class="img-thumbnail" src="/_assets/img/MajdanekCampMap.jpg" alt="Majdanek, Camp Map" height="1379" width="2127" />
 			</figure>
 			<p>
 				Similar to most other German concentration camps, living conditions in the camp were very harsh at the beginning, as everything had to be built from the ground up, meaning initially inmates had to sleep in the open, and there were no sanitary facilities or anything else. While private civilian companies, many of them Polish, did the detailed planning and provided skilled labor, inmates made up the unskilled labor force. The large presence of Polish civilians on the camp&rsquo;s construction sites made it easy for the inmates &mdash; and for the resistance movement in particular &mdash; to communicate with the outside world.
@@ -46,7 +46,7 @@
 				For many months, the city administration of Lublin refused to connect the camp to the local drinking water, city gas and sewer system. This was resolved only after top officials from Berlin intervened. It still took until early 1943 for the camp to be connected to the sewer system, and the drinking water system in the camp was finalized only in the fall of that year. Before that, well water infested with bacteria was used, and during winter, snow was melted to obtain water. The camp&rsquo;s first laundry facility was available only in early 1943. As a consequence, the camp&rsquo;s hygienic conditions remained dreadful for a long time, resulting in persistently appalling living conditions. With the outbreak of epidemics (<a href="/t/typhus/index.html">typhus</a>, dysentery, tuberculosis), this led to catastrophically high death rates, far worse than in any other camp of the Third Reich (except maybe Auschwitz during its cataclysmic typhus epidemic from mid-1942 to mid-1943). Medical care was almost non-existent initially, and then improved only with the slowly improving sanitary conditions. A careful study of the extant documentation results in a total death toll due to <q>natural</q> (non-homicidal) reasons of some 42,200 during the camp&rsquo;s entire existence. Some 20,000 inmates were released, hardly any of whom ever made any mass-murder claims.
 			</p>
 			<figure>
-				<img class="img-thumbnail" src="/_assets/img/MajdanekCremaPlan.png" alt="Majdanek, Crematorium Floor Plan" height="1625" width="1780" />
+				<img class="img-thumbnail" src="/_assets/img/MajdanekCremaPlan.jpg" alt="Majdanek, Crematorium Floor Plan" height="1625" width="1780" />
 				<figcaption>
 					Floor plan of the new crematorium at the Majdanek Camp, drawn by a Polish-Soviet commission. Room 3 is labeled as <q>gas chamber</q> (<q>komora gazowa</q>) although the room had two wall openings to Room 4 (morgue) that could not be closed, and it had no means of ventilating it: no fan, no window, no door to the outside. This homicidal-gas-chamber claim was dropped around the year 2000.
 				</figcaption>
@@ -171,7 +171,7 @@
 				Therefore, of the <q>roughly two million</q> victims of the Majdanek Camp claimed in 1944, not even four percent were left in 2005.
 			</p>
 			<figure>
-				<img class="img-thumbnail" src="/_assets/img/MajdanekDeathTollChart2023.png" alt="Majdanek Camp, Claimed Death Tolls" height="2713" width="4549" />
+				<img class="img-thumbnail" src="/_assets/img/MajdanekDeathTollChart2023.jpg" alt="Majdanek Camp, Claimed Death Tolls" height="2713" width="4549" />
 			</figure>
 			<h4>
 				<a id="Forensic"></a>Forensic Findings
