--- a/r/rajchman-chil/index.html
+++ b/r/rajchman-chil/index.html
@@ -22,7 +22,7 @@
 			<audio controls src="/_assets/audio/RajchmanChil.mp3">
 			</audio>
 			<figure>
-				<img class="img-thumbnail" src="/_assets/img/RajchmanChil.png" alt="Chil Rajchman" height="618" width="498" />
+				<img class="img-thumbnail" src="/_assets/img/RajchmanChil.jpg" alt="Chil Rajchman" height="618" width="498" />
 				<figcaption>
 					Chil Rajchman
 				</figcaption>
