--- a/r/ravensbruck/index.html
+++ b/r/ravensbruck/index.html
@@ -42,7 +42,7 @@
 				<li>Orthodox historians claim that Himmler ordered in the fall of 1944 that all exterminations must stop. (See the entry on <a href="/b/becher-kurt/index.html">Kurt Becher</a>.) How does that fit with a new order to start such activities again in February 1945?</li>
 			</ul>
 			<figure>
-				<img class="img-thumbnail" src="/_assets/img/Ravensbruck.png" alt="Ravensbr&uuml;ck, homicidal gas chamber" height="1254" width="1085" />
+				<img class="img-thumbnail" src="/_assets/img/Ravensbruck.jpg" alt="Ravensbr&uuml;ck, homicidal gas chamber" height="1254" width="1085" />
 			</figure>
 			<p>
 				Few of the testimonies describing the alleged gas chamber(s) or the gassing procedure contain any details that would make it possible to critique them. Everything is superficial, and when it comes to former inmates, their claims are evidently based on hearsay and rumor. Former inmate Irma Trksakova, for instance, claimed she had learned from an inmate who allegedly <q>was able to escape</q> from the gas chamber [sic]:
