--- a/v/vrba-rudolf/index.html
+++ b/v/vrba-rudolf/index.html
@@ -40,7 +40,7 @@
 				Here are some of the most pertinent and peculiar claims made by Vrba in his report co-authored with <a href="/w/wetzler-alfred/index.html">Wetzler</a> and in his book:
 			</p>
 			<figure>
-				<img class="img-thumbnail" src="/_assets/img/VrbaCrematoriumSketch.png" alt="Rudolf Vrba, floor-plan sketch of Crematorium II and III, Birkenau, War Refugee Board Report" height="903" width="1892" />
+				<img class="img-thumbnail" src="/_assets/img/VrbaCrematoriumSketch.jpg" alt="Rudolf Vrba, floor-plan sketch of Crematorium II and III, Birkenau, War Refugee Board Report" height="903" width="1892" />
 				<figcaption>
 					Rudolf Vrba&rsquo;s freely invented floor-plan sketch of Crematoria II and III, as published with the War Refugee Board Report. Compare this layout with the real layout as shown in the illustrations contained in the Auschwitz-Birkenau section of the entry on <a href="/c/crematoria/index.html#Auschwitz_Birkenau">Crematoria</a>.
 				</figcaption>
