--- a/c/censorship/index.html
+++ b/c/censorship/index.html
@@ -61,7 +61,7 @@
 				<a id="Penal"></a>Penal Law
 			</h5>
 			<figure>
-				<img class="img-thumbnail" src="/_assets/img/CensorshipTypeWriterExecution.png" alt="Censorship, execution of a typewriter, cartoon" height="186" width="350" />
+				<img class="img-thumbnail" src="/_assets/img/CensorshipTypeWriterExecution.jpg" alt="Censorship, execution of a typewriter, cartoon" height="186" width="350" />
 				<figcaption>
 					Executing the culprit of a thought crime.
 				</figcaption>
