--- a/f/france/index.html
+++ b/f/france/index.html
@@ -46,7 +46,7 @@
 				The data also shows that the mortality of the French Jews deported during the first four transports was shockingly high: between 50 and 70% of them died within the first two years of having been admitted to Auschwitz. The survival rate of deportees admitted later, on the other hand, was considerably better, although still catastrophic by any decent standard. (See the chart.) Women in general fared much better than men.
 			</p>
 			<figure>
-				<img class="img-thumbnail" src="/_assets/img/DeathRateFrenchDeportees.png" alt="Death Rate of French Deportees to Auschwitz" height="1549" width="2633" />
+				<img class="img-thumbnail" src="/_assets/img/DeathRateFrenchDeportees.jpg" alt="Death Rate of French Deportees to Auschwitz" height="1549" width="2633" />
 			</figure>
 			<p>
 				The highest death rate among the deportees from France occurred in August 1942 with 1,782 casualties. This coincides with the peak of mortality for the entire camp of 8,507 deceased inmates during that month, mainly due to the raging typhus epidemic. The available, incomplete documentation shows that almost half of all Jewish men deported from France and admitted to the camp died there, and some 10% of all admitted women. Since many later volumes of the Death Books are missing, the total number is most likely higher, although the mortality in general subsided considerably in late 1943 and in 1944 &ndash; only to escalate again toward the end of the war due to the generally catastrophic circumstances in collapsing Germany.
