--- a/h/holocaust-the/index.html
+++ b/h/holocaust-the/index.html
@@ -36,7 +36,7 @@
 				The term <q>the Holocaust,</q> with a capital H and the definitive article, became universally accepted as referring to the claimed National-Socialist mass-murder of Europe&rsquo;s Jews after the tremendous success of the U.S. TV mini-series <a href="https://www.youtube.com/watch?v=ILzC8jpbumo"><i>Holocaust</i></a> in 1978.
 			</p>
 			<figure>
-				<img class="img-thumbnail" src="/_assets/img/HolocaustChart.png" alt="Holocaust chart" height="3676" width="6600" />
+				<img class="img-thumbnail" src="/_assets/img/HolocaustChart.jpg" alt="Holocaust chart" height="3676" width="6600" />
 			</figure>
 			<p>
 				A common definition of <i>the Holocaust</i> consists of three main characteristics (see for instance <a href="/bibliography/index.html#Shermer">Shermer/Grobman 2000</a>, p. xv; <a href="/bibliography/index.html#Berenbaum">Berenbaum 1993</a>, p. 1):
@@ -219,7 +219,7 @@
 				<li>Testimonies</li>
 			</ol>
 			<figure>
-				<img class="img-thumbnail" src="/_assets/img/HolocaustEvidence.png" alt="Holocaust evidence" height="1590" width="3300" />
+				<img class="img-thumbnail" src="/_assets/img/HolocaustEvidence.jpg" alt="Holocaust evidence" height="1590" width="3300" />
 			</figure>
 			<h4>
 				a. <a id="Physical_Evidence"></a>Physical Evidence
