--- a/p/packing-density-inside-gas-chamber/index.html
+++ b/p/packing-density-inside-gas-chamber/index.html
@@ -40,7 +40,7 @@
 				Take the case of the underground <a href="/m/morgues/index.html">Morgue</a> #1 of <a href="/c/crematoria/index.html#Auschwitz_Birkenau">Crematoria</a> II and III at Auschwitz <a href="/b/birkenau/index.html">Birkenau</a>, for which we have blueprints showing their size, and the most witness accounts ever made for any homicidal gas-chamber claim. The room was 7 meters wide and 30 meters long. If we assume the average person to be half a meter wide and a quarter meter deep (25 cm), then physically we could fill the room as shown in the graphic, when packing them chest to back, shoulder to shoulder.
 			</p>
 			<figure>
-				<img class="img-thumbnail" src="/_assets/img/PackingDensityGraphic.png" alt="Packing Density, inside Gas Chamber, Graphic" height="266" width="1002" />
+				<img class="img-thumbnail" src="/_assets/img/PackingDensityGraphic.jpg" alt="Packing Density, inside Gas Chamber, Graphic" height="266" width="1002" />
 				<figcaption>
 					Morgue #1, Crematorium II and III, Auschwitz-Birkenau, viewed from top, packed full of people represented as dark brown dots (heads) and light brown base (trunk).
 				</figcaption>
