add lead paragraphs for A.K.A. entries

--- a/d/doessekker-bruno/index.html
+++ b/d/doessekker-bruno/index.html
@@ -19,6 +19,9 @@
 			<h2>
 				Doessekker, Bruno
 			</h2>
+			<p class="lead">
+				A.K.A. Binjamin Wilkomirski
+			</p>
 			<audio controls src="/_assets/audio/DoessekkerBruno.mp3">
 			</audio>
 			<figure>
