--- a/e/index.html
+++ b/e/index.html
@@ -45,7 +45,7 @@
 						<li><a href="/e/explosives-as-a-murder-weapon/index.html">Explosives, as a Murder Weapon</a></li>
 						<li><a href="/e/explosives-to-erase-corpses/index.html">Explosives, to Erase Corpses</a></li>
 						<li><a href="/e/extermination-camps/index.html">Extermination Camps</a></li>
-						<li><a href="/e/extirpation/index.html">Extirpation (<i>Ausrottung, Vernichtung</i>)</a></li>
+						<li><a href="/e/extirpation/index.html">Extirpation</a></li>
 					</ul>
 			</div>
 <!-- #bbinclude "footer.incl" -->
