--- a/f/false-witnesses/index.html
+++ b/f/false-witnesses/index.html
@@ -36,8 +36,8 @@
 			<ul>
 				<li><a href="/a/avey-denis/index.html">Denis Avey</a></li>
 				<li><a href="/c/corry-joe/index.html">Joe Corry</a></li>
-				<li><a href="/d/doessekker-bruno/index.html">Bruno Doessekker</a> (aka Binjamin Wilkomirski)</li>
-				<li><a href="/g/gray-martin/index.html">Martin Gray</a> (aka Mieczyslaw Grajewski)</li>
+				<li><a href="/d/doessekker-bruno/index.html">Bruno Doessekker</a> (A.K.A. Binjamin Wilkomirski)</li>
+				<li><a href="/g/gray-martin/index.html">Martin Gray</a> (A.K.A. Mieczyslaw Grajewski)</li>
 				<li>Marie Sophie Hingst</li>
 				<li><a href="/h/hirt-joseph/index.html">Joseph Hirt</a></li>
 				<li><a href="/h/holstein-bernard/index.html">Bernard Holstein</a></li>
@@ -45,16 +45,15 @@
 				<li>Rosemarie Koczy</li>
 				<li><a href="/k/kosinski-jerzy/index.html">Jerzy Kosinski</a></li>
 				<li><a href="/m/marco-enric/index.html">Enric Marco</a></li>
-				<li>Alfred Mende (aka Isaac Lewinson)</li>
+				<li>Alfred Mende (A.K.A. Isaac Lewinson)</li>
 				<li>Karin Mylius</li>
 				<li>Wolfgang Seibert</li>
 				<li>Axel Sp&ouml;rl</li>
 				<li><a href="/u/uthgenannt-otto/index.html">Otto Uthgenannt</a></li>
 				<li>Irena Wachendorff</li>
-				<li><a href="/w/wael-monique-de/index.html">Monique de Wael</a> (aka Misha Defonesca)</li>
+				<li><a href="/w/wael-monique-de/index.html">Monique de Wael</a> (A.K.A. Misha Defonesca)</li>
 				<li><a href="/w/watt-donald/index.html">Donald Watt</a></li>
 				<li>Laurel Rose Willson</li>
-				<li>to be completed</li>
 			</ul>
 			<p>
 				(See each entry as well as <a href="/bibliography/index.html#Vice2014a">Vice 2014a</a> &amp; <a href="/bibliography/index.html#Vice2014b">b</a> and, as long as it exists, <a href="https://de.wikipedia.org/wiki/Wilkomirski-Syndrom">de.wikipedia.org/wiki/Wilkomirski-Syndrom</a>)
