--- a/g/gabai-yaakov/index.html
+++ b/g/gabai-yaakov/index.html
@@ -19,6 +19,9 @@
 			<h2>
 				Gabai, Yaakov
 			</h2>
+			<p class="lead">
+				A.K.A. Yaakov Gabbai, Ya&rsquo;akov Gabbai, Jaacov Gabbai, Jacob Gabbai
+			</p>
 			<audio controls src="/_assets/audio/GabaiYaakov.mp3">
 			</audio>
 			<figure>
@@ -28,7 +31,7 @@
 				</figcaption>
 			</figure>
 			<p>
-				Yaakov Gabai (or Gabbai, aka Ya&rsquo;akov, Jaacov, Jacob; born in Athens in 1912) arrived at Auschwitz from Greece on 11 April 1944. In 1983, he wrote a brief text about his alleged experiences in <a href="/a/auschwitz/index.html">Auschwitz</a>, almost four decades after the witnessed events, when asked to do so by <a href="/k/kulka-erich/index.html">Erich Kulka</a>. Some ten years later, he was interviewed by Israeli historian Gideon Greif.
+				Yaakov Gabai (or Gabbai, A.K.A. Ya&rsquo;akov, Jaacov, Jacob; born in Athens in 1912) arrived at Auschwitz from Greece on 11 April 1944. In 1983, he wrote a brief text about his alleged experiences in <a href="/a/auschwitz/index.html">Auschwitz</a>, almost four decades after the witnessed events, when asked to do so by <a href="/k/kulka-erich/index.html">Erich Kulka</a>. Some ten years later, he was interviewed by Israeli historian Gideon Greif.
 			</p>
 			<p>
 				Gabai&rsquo;s testimony given to Greif is riddled with claims and data about events that he, as a simple member of the <a href="/c/crematoria/index.html">crematoria</a> stokers, could not possibly know, such as which transport arrived at Auschwitz from where, with how many inmates, how many people were presumably killed in all claimed killing facilities at Auschwitz, and what the overall capacity of these facilities were. Where his claims can be verified by wartime documents, Gabai&rsquo;s assertions turn out to be false, including:
