--- a/g/garbarz-moshe/index.html
+++ b/g/garbarz-moshe/index.html
@@ -65,7 +65,7 @@
 			</p>
 			<hr />
 			<p>
-				<small><a class="sdfootnotesym-western" href="#sdfootnote1anc" name="sdfootnote1sym">[1]</a> Jewish Family and Children&rsquo;s Services of San Francisco, Interview with Moishe Garbarz 8/20/1991; USHMM Oral History Archive, RG-50.477.0909; <a href="https://collections.ushmm.org/search/catalog/irn516926">collections.ushmm.org/search/catalog/irn516926</a>.</small>
+				<small><a href="#sdfootnote1anc" name="sdfootnote1sym">[1]</a> Jewish Family and Children&rsquo;s Services of San Francisco, Interview with Moishe Garbarz 8/20/1991; USHMM Oral History Archive, RG-50.477.0909; <a href="https://collections.ushmm.org/search/catalog/irn516926">collections.ushmm.org/search/catalog/irn516926</a>.</small>
 			</p>
 <!-- #bbinclude "footer.incl" -->
 </article><div class="col-md-3"><nav class="navigation" id="nav-hhp"></nav><hr><aside id="aside"></aside><script src="/_assets/js/aside-min.js"></script></div></div></main><footer class="footer" id="footer"><p class="text-center">Copyright &copy; 2022-2024 Academic Research Group</p></footer>
