--- a/g/gray-martin/index.html
+++ b/g/gray-martin/index.html
@@ -19,6 +19,9 @@
 			<h2>
 				Gray, Martin
 			</h2>
+			<p class="lead">
+				A.K.A. Mieczyslaw Grajewski
+			</p>
 			<audio controls src="/_assets/audio/GrayMartin.mp3">
 			</audio>
 			<p>
