--- a/h/index.html
+++ b/h/index.html
@@ -43,7 +43,7 @@
 						<li><a href="/h/hofle-hans/index.html">H&ouml;fle, Hans</a></li>
 						<li><a href="/h/hofmann-ernst/index.html">Hofmann, Ernst</a></li>
 						<li><a href="/h/holocaust-indoctrination/index.html">Holocaust Indoctrination</a></li>
-						<li><a href="/h/holocaust-skepticism-revisionism/index.html">Holocaust Skepticism (Revisionism)</a></li>
+						<li><a href="/h/holocaust-skepticism-revisionism/index.html">Holocaust Skepticism</a></li>
 						<li><a href="/h/holocaust-the/index.html">Holocaust, the</a></li>
 						<li><a href="/h/holstein-bernard/index.html">Holstein, Bernard</a></li>
 						<li><a href="/h/homicidal-gas-chambers/index.html">Homicidal Gas Chamber</a></li>
