--- a/k/kaufmann-jeannette/index.html
+++ b/k/kaufmann-jeannette/index.html
@@ -27,7 +27,7 @@
 			<ul>
 				<li>The <a href="/c/cremation-propaganda/index.html">cremation capacity</a> was 20 bodies every 10 minutes &mdash; when in fact it was fifteen corpses (in 15 muffles) in an hour.</li>
 				<li>A light railway line ran into it for conveying sick persons too ill to walk (first text), or to remove the dead from the gas chamber (second text) &mdash; no such thing ever existed.</li>
-				<li>The <q>bathroom</q> &mdash; aka <q>gas chamber</q> &mdash; had a very big door like that of a bank safe &mdash; all normal-looking <a href="/g/gastight-doors/index.html">doors</a> at Birkenau were made of simple wooden planks.</li>
+				<li>The <q>bathroom</q> &mdash; A.K.A. <q>gas chamber</q> &mdash; had a very big door like that of a bank safe &mdash; all normal-looking <a href="/g/gastight-doors/index.html">doors</a> at Birkenau were made of simple wooden planks.</li>
 				<li>The showerheads were connected to gas pipes instead of water pipes &mdash; while the <a href="/m/morgues/index.html">morgues</a> of Crematoria II and III had real <a href="/s/showers/index.html">showers</a>, and the gas was supposedly supplied by throwing in <a href="/z/zyklon-b/index.html">Zyklon-B</a> pellets.</li>
 				<li>Gas may have penetrated into the room through <q>boxes with little holes in them which looked like electric fuse boxes.</q></li>
 				<li>The <q>bathroom</q> (Morgue #1, 210 m&sup2;) could process 2,000 people within 15 minutes &mdash; a <a href="/p/packing-density-inside-gas-chamber/index.html">packing density</a> of some ten people per square meter, which would have required discipline, training and cooperativeness.</li>
