--- a/m/index.html
+++ b/m/index.html
@@ -32,7 +32,7 @@
 						<li><a href="/m/marco-enric/index.html">Marco, Enric</a></li>
 						<li><a href="/m/marcus-kurt/index.html">Marcus, Kurt</a></li>
 						<li><a href="/m/marijampole/index.html">Marijampole</a></li>
-						<li><a href="/m/marsalek-hans/index.html">Marsalek, Hans</a></li>
+						<li><a href="/m/marsalek-hans/index.html">Mar&scaron;&aacute;lek, Hans</a></li>
 						<li><a href="/m/mass-graves/index.html">Mass Graves</a></li>
 						<li><a href="/m/mauthausen/index.html">Mauthausen</a></li>
 						<li><a href="/m/mengele-josef/index.html">Mengele, Josef</a></li>
