--- a/p/polevoy-boris/index.html
+++ b/p/polevoy-boris/index.html
@@ -19,6 +19,9 @@
 			<h2>
 				Polevoy, Boris
 			</h2>
+			<p class="lead">
+				Pseudonym for Boris Nikolayevich Kampov
+			</p>
 			<audio controls src="/_assets/audio/PolevoyBoris.mp3">
 			</audio>
 			<figure>
@@ -28,7 +31,7 @@
 				</figcaption>
 			</figure>
 			<p>
-				Boris Nikolaevich Polevoy (aka Kampov; 17 March 1908 &ndash; 12 July 1981) was a Soviet journalist writing primarily for Soviet Russia&rsquo;s leading newspaper <i>Pravda.</i> His m&eacute;tier was similar to <a href="/e/ehrenburg-ilya/index.html">Ilya Ehrenburg</a>&rsquo;s: glorifying communism and the Soviet Union, and as Pravda&rsquo;s official war correspondent during the war, exaggerating and inventing atrocity tales about the enemy and spreading them most effectively. (See <a href="/bibliography/index.html#Heddesheimer2002">Heddesheimer 2002</a> for more details.)
+				Boris Nikolaevich Polevoy (17 March 1908 &ndash; 12 July 1981) was a Soviet journalist writing primarily for Soviet Russia&rsquo;s leading newspaper <i>Pravda.</i> His m&eacute;tier was similar to <a href="/e/ehrenburg-ilya/index.html">Ilya Ehrenburg</a>&rsquo;s: glorifying communism and the Soviet Union, and as Pravda&rsquo;s official war correspondent during the war, exaggerating and inventing atrocity tales about the enemy and spreading them most effectively. (See <a href="/bibliography/index.html#Heddesheimer2002">Heddesheimer 2002</a> for more details.)
 			</p>
 			<p>
 				Polevoy was among the Soviet troops who entered the abandoned <a href="/a/auschwitz/index.html">Auschwitz Camp</a> on 27 January 1945. Here are some of the claims he made about that camp in his two first reports of 29 January and 2 February 1945 (for details, see <a href="/bibliography/index.html#Mattogno2021">Mattogno 2021</a>, pp. 294f.):
