--- a/r/rajchman-chil/index.html
+++ b/r/rajchman-chil/index.html
@@ -7,7 +7,7 @@
 <script src="https://code.jquery.com/jquery-3.7.1.min.js" integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo=" crossorigin="anonymous"></script>
 
 <!-- end bbinclude -->
-	<title>Rajchman, Chil (Reichman(n), Ye(c)hiel) | Holocaust Encyclopedia</title>
+	<title>Rajchman, Chil | Holocaust Encyclopedia</title>
 </head>
 <body>
 <!-- #bbinclude "page-header-small.incl" -->
@@ -17,8 +17,11 @@
 <h1>Holocaust Encyclopedia</h1><p class="lead">uncensored and unconstrained</p><div id="masthead"></div><script src="/_assets/js/masthead-min.js"></script><nav id="breadcrumbs"></nav><script src="/_assets/js/nav-hhp-min.js"></script>
 <!-- end bbinclude -->
 			<h2>
-				Rajchman, Chil <small>(Reichman(n), Ye(c)hiel)</small>
+				Rajchman, Chil
 			</h2>
+			<p class="lead">
+				A.K.A. Ye(c)hiel Reichman(n)
+			</p>
 			<audio controls src="/_assets/audio/RajchmanChil.mp3">
 			</audio>
 			<figure>
@@ -28,7 +31,7 @@
 				</figcaption>
 			</figure>
 			<p>
-				Chil Rajchman (aka Henryk or Ye(c)hiel Reichman(n), 14 June 1914 &ndash; 7 May 2004) was a Polish Jew who was deported to the <a href="/t/treblinka/index.html">Treblinka</a> Camp on 10 October 1942, from which he escaped after an inmate uprising on 2 August 1943. Still during the war, he presumably wrote down his experiences in Yiddish, which were then rewritten by a poet named Nachum Bomze. His version is the only one that survived and was later translated and published in various languages (English see <a href="/bibliography/index.html#Rajchman">Rajchman 2011</a>). Rajchman was also interrogated by a Polish investigative commission on 12 October 1945, and he testified in U.S. proceedings leading to the extradition of <a href="/d/demjanjuk-john/index.html">John Demjanjuk</a>, as well as during the Demjanjuk show trial itself. Finally, the United States Holocaust Memorial Museum conducted an interview with him in December 1988.
+				Chil Rajchman (14 June 1914 &ndash; 7 May 2004) was a Polish Jew who was deported to the <a href="/t/treblinka/index.html">Treblinka</a> Camp on 10 October 1942, from which he escaped after an inmate uprising on 2 August 1943. Still during the war, he presumably wrote down his experiences in Yiddish, which were then rewritten by a poet named Nachum Bomze. His version is the only one that survived and was later translated and published in various languages (English see <a href="/bibliography/index.html#Rajchman">Rajchman 2011</a>). Rajchman was also interrogated by a Polish investigative commission on 12 October 1945, and he testified in U.S. proceedings leading to the extradition of <a href="/d/demjanjuk-john/index.html">John Demjanjuk</a>, as well as during the Demjanjuk show trial itself. Finally, the United States Holocaust Memorial Museum conducted an interview with him in December 1988.
 			</p>
 			<p>
 				Here are some of the more peculiar claims by Rajchman:
