--- a/w/war-refugee-board-report/index.html
+++ b/w/war-refugee-board-report/index.html
@@ -7,7 +7,7 @@
 <script src="https://code.jquery.com/jquery-3.7.1.min.js" integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo=" crossorigin="anonymous"></script>
 
 <!-- end bbinclude -->
-	<title>War Refugee Board Report (Auschwitz Protocols) | Holocaust Encyclopedia</title>
+	<title>War Refugee Board Report | Holocaust Encyclopedia</title>
 </head>
 <body>
 <!-- #bbinclude "page-header-small.incl" -->
@@ -17,8 +17,11 @@
 <h1>Holocaust Encyclopedia</h1><p class="lead">uncensored and unconstrained</p><div id="masthead"></div><script src="/_assets/js/masthead-min.js"></script><nav id="breadcrumbs"></nav><script src="/_assets/js/nav-hhp-min.js"></script>
 <!-- end bbinclude -->
 			<h2>
-				War Refugee Board Report <small>(Auschwitz Protocols)</small>
+				War Refugee Board Report
 			</h2>
+			<p class="lead">
+				Including the Auschwitz Protocols
+			</p>
 			<audio controls src="/_assets/audio/WarRefugeeBoardReport.mp3">
 			</audio>
 			<p>
