--- a/w/weliczker-leon/index.html
+++ b/w/weliczker-leon/index.html
@@ -19,6 +19,9 @@
 			<h2>
 				Weliczker, Leon
 			</h2>
+			<p class="lead">
+				A.K.A. Leon Wells
+			</p>
 			<audio controls src="/_assets/audio/WeliczkerLeon.mp3">
 			</audio>
 			<figure>
@@ -28,7 +31,7 @@
 				</figcaption>
 			</figure>
 			<p>
-				Leon Weliczker (aka Leon Wells, 10 March 1925 &ndash; 19 Dec. 2009) was a Jew from <a href="/l/lviv/index.html">Lviv</a> who, after the German invasion of the Soviet Union, lived initially at the Lvov Ghetto, but at age 18 was transferred to the <a href="/j/janowska-camp/index.html">Janowska Forced-Labor Camp</a>. After the war, he studied first in Gleiwitz (Polish: Gliwice), then in Munich, graduating with a PhD in engineering. He later emigrated to the United States, where he changed his last name to Wells.
+				Leon Weliczker (10 March 1925 &ndash; 19 Dec. 2009) was a Jew from <a href="/l/lviv/index.html">Lviv</a> who, after the German invasion of the Soviet Union, lived initially at the Lvov Ghetto, but at age 18 was transferred to the <a href="/j/janowska-camp/index.html">Janowska Forced-Labor Camp</a>. After the war, he studied first in Gleiwitz (Polish: Gliwice), then in Munich, graduating with a PhD in engineering. He later emigrated to the United States, where he changed his last name to Wells.
 			</p>
 			<p>
 				In 1944, he deposited a witness statement in the Soviet Union about his alleged work from 15 June 1943 until 20 November 1943 in a <q>death brigade</q> at the outskirts of the western Ukrainian city of <a href="/l/lviv/index.html">Lviv</a>. Some excerpts of notes he wrote down during the war were published in an edited version in a 1946 book, whose translated title is <i>The Death Brigade.</i> It is the most-important source for the alleged eradication of <a href="/m/mass-graves/index.html">mass graves</a> near <a href="/l/lviv/index.html">Lviv</a> within the context of what today&rsquo;s orthodoxy calls <a href="/a/aktion-1005/index.html"><i>Aktion</i> 1005</a>. Here are several peculiar claims made by Weliczker:
