--- a/a/auschwitz/index.html
+++ b/a/auschwitz/index.html
@@ -7,7 +7,7 @@
 <script src="https://code.jquery.com/jquery-3.7.1.min.js" integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo=" crossorigin="anonymous"></script>
 
 <!-- end bbinclude -->
-	<title>Auschwitz (O&#347;wi&#281;cim) | Holocaust Encyclopedia</title>
+	<title>Auschwitz | Holocaust Encyclopedia</title>
 </head>
 <body>
 <!-- #bbinclude "page-header-small.incl" -->
@@ -17,8 +17,11 @@
 <h1>Holocaust Encyclopedia</h1><p class="lead">uncensored and unconstrained</p><div id="masthead"></div><script src="/_assets/js/masthead-min.js"></script><nav id="breadcrumbs"></nav><script src="/_assets/js/nav-hhp-min.js"></script>
 <!-- end bbinclude -->
 			<h2>
-				Auschwitz <small><i>(O&#347;wi&#281;cim)</i></small>
+				Auschwitz
 			</h2>
+			<p class="lead">
+				A.K.A. O&#347;wi&#281;cim
+			</p>
 			<audio controls src="/_assets/audio/Auschwitz.mp3">
 			</audio>
 			<figure>
@@ -135,7 +138,7 @@
 					</tr>
 					<tr>
 						<td>2,500,000</td>
-						<td>Rudolf Vrba, aka Walter Rosenberg, Eichmann Trial (1961)</td>
+						<td>Rudolf Vrba, A.K.A. Walter Rosenberg, Eichmann Trial (1961)</td>
 					</tr>
 					<tr>
 						<td>1,5&ndash;3,500,000</td>
