--- a/g/gruner-miklos/index.html
+++ b/g/gruner-miklos/index.html
@@ -19,6 +19,9 @@
 			<h2>
 				Gr&uuml;ner, Mikl&oacute;s
 			</h2>
+			<p class="lead">
+				A.K.A. Nikolaus Michael Gr&uuml;ner
+			</p>
 			<audio controls src="/_assets/audio/GrunerMiklos.mp3">
 			</audio>
 			<figure>
@@ -28,7 +31,7 @@
 				</figcaption>
 			</figure>
 			<p>
-				Nikolaus Michael (aka Mikl&oacute;s) Gr&uuml;ner was a Hungarian Jew who claimed that he knew <a href="/w/wiesel-elie/index.html">Elie Wiesel</a> from their time together at the <a href="/a/auschwitz/index.html">Auschwitz</a> Camp, but that the person who claimed to be Elie Wiesel after the war and became famous as the best-known Holocaust <q>survivor</q> is a different person.
+				Nikolaus Michael Gr&uuml;ner was a Hungarian Jew who claimed that he knew <a href="/w/wiesel-elie/index.html">Elie Wiesel</a> from their time together at the <a href="/a/auschwitz/index.html">Auschwitz</a> Camp, but that the person who claimed to be Elie Wiesel after the war and became famous as the best-known Holocaust <q>survivor</q> is a different person.
 			</p>
 			<p>
 				Documents prove that a Lazar Wiesel, born in 1913, was deported to and registered at the Auschwitz Camp. He was deported together with his 13-year older brother Abraham. Elie Wiesel claims to have been born in 1928, hence 15 years after Lazar Wiesel, that he had received Lazar&rsquo;s inmate number (and was tattooed with it), and that Abraham was actually his father. However, his father&rsquo;s first name was Shlomo, who was six years older than Abraham Wiesel. There is no trace in the Auschwitz records or anywhere else of any other person with the last name Wiesel (or any spelling derivative of it) with the biographical data of Elie Wiesel. The documents suggest, therefore, that Elie Wiesel is not identical with Lazar Wiesel. Thus, there is no proof that Elie Wiesel was ever interned at Auschwitz. (For details, see <a href="/bibliography/index.html#Gruner">Gr&uuml;ner 2007</a>; <a href="/bibliography/index.html#Routledge">Routledge 2020</a>, pp. 377-418.)
