--- a/i/iron-blue/index.html
+++ b/i/iron-blue/index.html
@@ -7,7 +7,7 @@
 <script src="https://code.jquery.com/jquery-3.7.1.min.js" integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo=" crossorigin="anonymous"></script>
 
 <!-- end bbinclude -->
-	<title>Iron Blue (blue wall discoloration, Prussian blue) | Holocaust Encyclopedia</title>
+	<title>Iron Blue | Holocaust Encyclopedia</title>
 </head>
 <body>
 <!-- #bbinclude "page-header-small.incl" -->
@@ -17,8 +17,11 @@
 <h1>Holocaust Encyclopedia</h1><p class="lead">uncensored and unconstrained</p><div id="masthead"></div><script src="/_assets/js/masthead-min.js"></script><nav id="breadcrumbs"></nav><script src="/_assets/js/nav-hhp-min.js"></script>
 <!-- end bbinclude -->
 			<h2>
-				Iron Blue <small>(blue wall discoloration, Prussian blue)</small>
+				Iron Blue
 			</h2>
+			<p class="lead">
+				A.K.A. blue wall discoloration, Prussian blue
+			</p>
 			<audio controls src="/_assets/audio/IronBlue.mp3">
 			</audio>
 			<figure>
