--- a/r/reder-rudolf/index.html
+++ b/r/reder-rudolf/index.html
@@ -19,6 +19,9 @@
 			<h2>
 				Reder, Rudolf
 			</h2>
+			<p class="lead">
+				A.K.A. Roman Robak
+			</p>
 			<audio controls src="/_assets/audio/RederRudolf.mp3">
 			</audio>
 			<figure>
@@ -28,7 +31,7 @@
 				</figcaption>
 			</figure>
 			<p>
-				Rudolf Reder (aka Roman Robak, 4 April 1881 &ndash; 6 Oct. 1977) was a Polish Jew from Lviv who was deported to the <a href="/b/belzec/index.html">Belzec</a> Camp in July or August 1942 at age 61 &mdash; which should have been his death sentence. But he miraculously was selected to live and work there as a stove mechanic for four months before managing to escape. Currently, nine texts by Reder are known in which he describes what he claims to have experienced at that camp (depositions, interviews, testimonies and one booklet). Reder is considered the only (self-proclaimed) former inmate of the Belzec Camp who made significant statements about this camp. Apart from the highly unreliable postwar statements by the former SS man <a href="/g/gerstein-kurt/index.html">Kurt Gerstein</a> and later trial statements of defendants and SS witnesses during the 1965 West-German <a href="/b/belzec-trial/index.html">Belzec show trial</a> (including <a href="/p/pfannenstiel-wilhelm/index.html">Wilhelm Pfannenstiel</a>), Reder&rsquo;s texts are the only sources of information stemming from the immediate post-war period that historians have on events allegedly unfolding at Belzec.
+				Rudolf Reder (4 April 1881 &ndash; 6 Oct. 1977) was a Polish Jew from Lviv who was deported to the <a href="/b/belzec/index.html">Belzec</a> Camp in July or August 1942 at age 61 &mdash; which should have been his death sentence. But he miraculously was selected to live and work there as a stove mechanic for four months before managing to escape. Currently, nine texts by Reder are known in which he describes what he claims to have experienced at that camp (depositions, interviews, testimonies and one booklet). Reder is considered the only (self-proclaimed) former inmate of the Belzec Camp who made significant statements about this camp. Apart from the highly unreliable postwar statements by the former SS man <a href="/g/gerstein-kurt/index.html">Kurt Gerstein</a> and later trial statements of defendants and SS witnesses during the 1965 West-German <a href="/b/belzec-trial/index.html">Belzec show trial</a> (including <a href="/p/pfannenstiel-wilhelm/index.html">Wilhelm Pfannenstiel</a>), Reder&rsquo;s texts are the only sources of information stemming from the immediate post-war period that historians have on events allegedly unfolding at Belzec.
 			</p>
 			<p>
 				A critical analysis of Reder&rsquo;s nine texts shows that they contradict one another in many respects. The following list is limited to the most strident examples of contradictions and to the more peculiar of Reder&rsquo;s claims:
