--- a/t/tauber-henryk/index.html
+++ b/t/tauber-henryk/index.html
@@ -19,6 +19,9 @@
 			<h2>
 				Tauber, Henryk
 			</h2>
+			<p class="lead">
+				A.K.A. Henryk Fuchsbrunner, Henry Fuchs
+			</p>
 			<audio controls src="/_assets/audio/TauberHenryk.mp3">
 			</audio>
 			<figure>
@@ -28,7 +31,7 @@
 				</figcaption>
 			</figure>
 			<p>
-				Henryk Tauber (aka Fuchsbrunner; 8 July 1917 &ndash; 3 Jan. 2000) was a Polish Jew sent to the <a href="/a/auschwitz/index.html">Auschwitz Camp</a> in November 1942. He claimed to have been assigned to the <a href="/s/sonderkommando/index.html"><i>Sonderkommando</i></a> and worked as a furnace stoker first at the <a href="/a/auschwitz-main-camp/index.html">Main Camp</a>&rsquo;s <a href="/c/crematoria/index.html#Auschwitz_Main">crematorium</a>, then in <a href="/c/crematoria/index.html#Auschwitz_Birkenau">Crematorium</a> II at the <a href="/b/birkenau/index.html">Birkenau</a> Camp.
+				Henryk Tauber (8 July 1917 &ndash; 3 Jan. 2000) was a Polish Jew sent to the <a href="/a/auschwitz/index.html">Auschwitz Camp</a> in November 1942. He claimed to have been assigned to the <a href="/s/sonderkommando/index.html"><i>Sonderkommando</i></a> and worked as a furnace stoker first at the <a href="/a/auschwitz-main-camp/index.html">Main Camp</a>&rsquo;s <a href="/c/crematoria/index.html#Auschwitz_Main">crematorium</a>, then in <a href="/c/crematoria/index.html#Auschwitz_Birkenau">Crematorium</a> II at the <a href="/b/birkenau/index.html">Birkenau</a> Camp.
 			</p>
 			<p>
 				Tauber made three depositions right after the war, with the first of them occurring in late February 1945 in front of a Soviet commission. His next deposition was end of May 1945 in front of Polish investigative judge <a href="/s/sehn-jan/index.html">Jan Sehn</a>. Another much shorter deposition was filed with the Jewish Historical Commission of Krakow also in 1945. Tauber was prudent enough not to testify anymore in later years.
