--- a/w/wael-monique-de/index.html
+++ b/w/wael-monique-de/index.html
@@ -7,7 +7,7 @@
 <script src="https://code.jquery.com/jquery-3.7.1.min.js" integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo=" crossorigin="anonymous"></script>
 
 <!-- end bbinclude -->
-	<title>Wael, Monique de (Defonseca, Misha) | Holocaust Encyclopedia</title>
+	<title>Wael, Monique de | Holocaust Encyclopedia</title>
 </head>
 <body>
 <!-- #bbinclude "page-header-small.incl" -->
@@ -17,8 +17,11 @@
 <h1>Holocaust Encyclopedia</h1><p class="lead">uncensored and unconstrained</p><div id="masthead"></div><script src="/_assets/js/masthead-min.js"></script><nav id="breadcrumbs"></nav><script src="/_assets/js/nav-hhp-min.js"></script>
 <!-- end bbinclude -->
 			<h2>
-				Wael, Monique de <small>(Defonseca, Misha)</small>
+				Wael, Monique de
 			</h2>
+			<p class="lead">
+				A.K.A. Misha Defonseca
+			</p>
 			<audio controls src="/_assets/audio/WaelMoniqueDe.mp3">
 			</audio>
 			<figure>
