--- a/w/wiernik-jankiel-yankiel/index.html
+++ b/w/wiernik-jankiel-yankiel/index.html
@@ -7,7 +7,7 @@
 <script src="https://code.jquery.com/jquery-3.7.1.min.js" integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo=" crossorigin="anonymous"></script>
 
 <!-- end bbinclude -->
-	<title>Wiernik, Jankiel (Yankiel) | Holocaust Encyclopedia</title>
+	<title>Wiernik, Jankiel | Holocaust Encyclopedia</title>
 </head>
 <body>
 <!-- #bbinclude "page-header-small.incl" -->
@@ -17,8 +17,11 @@
 <h1>Holocaust Encyclopedia</h1><p class="lead">uncensored and unconstrained</p><div id="masthead"></div><script src="/_assets/js/masthead-min.js"></script><nav id="breadcrumbs"></nav><script src="/_assets/js/nav-hhp-min.js"></script>
 <!-- end bbinclude -->
 			<h2>
-				Wiernik, Jankiel <small>(Yankiel)</small>
+				Wiernik, Jankiel
 			</h2>
+			<p>
+				A.K.A. Yankiel Wiernik
+			</p>
 			<audio controls src="/_assets/audio/WiernikJankiel.mp3">
 			</audio>
 			<figure>
