--- a/z/zaydel-matvey/index.html
+++ b/z/zaydel-matvey/index.html
@@ -7,7 +7,7 @@
 <script src="https://code.jquery.com/jquery-3.7.1.min.js" integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo=" crossorigin="anonymous"></script>
 
 <!-- end bbinclude -->
-	<title>Zaydel, Matvey (Zaidl, Motle) | Holocaust Encyclopedia</title>
+	<title>Zaydel, Matvey | Holocaust Encyclopedia</title>
 </head>
 <body>
 <!-- #bbinclude "page-header-small.incl" -->
@@ -17,12 +17,15 @@
 <h1>Holocaust Encyclopedia</h1><p class="lead">uncensored and unconstrained</p><div id="masthead"></div><script src="/_assets/js/masthead-min.js"></script><nav id="breadcrumbs"></nav><script src="/_assets/js/nav-hhp-min.js"></script>
 <!-- end bbinclude -->
 			<h2>
-				Zaydel, Matvey <small>(Zaidl, Motle)</small>
+				Zaydel, Matvey
 			</h2>
+			<p class="lead">
+				A.K.A. Motle Zaidl
+			</p>
 			<audio controls src="/_assets/audio/ZaydelMatvey.mp3">
 			</audio>
 			<p>
-				Matvey Zaydel (aka Motle Zaidl), a Jew from Vilnius, Lithuania, was interrogated by a Soviet commission, whose report is undated, but probably dates from 1946. According to this report, Zaydel claimed to have been arrested by German forces in October 1943. From December 1943 until April 1944, he was forced to exhume and burn corpses from mass graves near a Vilnius suburb called <a href="/p/ponary/index.html">Ponary</a>. He escaped from there at an unknown date and under unknown circumstances.
+				Matvey Zaydel, a Jew from Vilnius, Lithuania, was interrogated by a Soviet commission, whose report is undated, but probably dates from 1946. According to this report, Zaydel claimed to have been arrested by German forces in October 1943. From December 1943 until April 1944, he was forced to exhume and burn corpses from mass graves near a Vilnius suburb called <a href="/p/ponary/index.html">Ponary</a>. He escaped from there at an unknown date and under unknown circumstances.
 			</p>
 			<p>
 				However, in a much-later interview for Claude Lanzmann&rsquo;s documentary <a href="/bibliography/index.html#Lanzmann"><i>Shoah</i></a> sometime in the early 1980s, Zaydel plagiarized the tale told by <a href="/f/farber-yuri/index.html">Yuri Farber</a> about a sophisticated escape tunnel, fitted with support poles and electric lighting. (See the entry on <a href="/f/farber-yuri/index.html">Farber</a>.) If we follow Zaydel, they dug that tunnel into the sandy soil mainly with a tablespoon. Since Zaydel&rsquo;s statements made during the <i>Shoah</i> interview, and the concurrent statements by his alleged former co-inmate <a href="/d/dugin-itzhak/index.html">Itzhak Dugin</a>, are evidently polluted with <q>knowledge</q> gained after the war, it is worthless as evidence, hence will be ignored here.
