--- a/r/index.html
+++ b/r/index.html
@@ -42,6 +42,7 @@
 						<li><a href="/r/renard-jean-paul/index.html">Renard, Jean-Paul</a></li>
 						<li><a href="/c/compensation/index.html">reparations</a></li>
 						<li><a href="/r/resettlement/index.html">Resettlement</a></li>
+						<li><a href="/h/holocaust-skepticism-revisionism/index.html">revisionism</a></li>
 						<li><a href="/r/ringelblum-emanuel/index.html">Ringelblum Archives</a></li>
 						<li><a href="/r/ringelblum-emanuel/index.html">Ringelblum, Emanuel</a></li>
 						<li><a href="/r/rogerie-andre/index.html">Rogerie, Andr&eacute;</a></li>
