--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 <!-- #bbinclude "siteicons.incl" -->
 <link rel="icon" type="image/png" href="/_assets/siteicons/favicon-96x96.png" /><link rel="icon" type="image/svg+xml" href="/_assets/siteicons/favicon.svg" /><link rel="icon" href="/_assets/siteicons/favicon.ico" /><link rel="apple-touch-icon" href="/_assets/siteicons/apple-touch-icon.png" /><link rel="manifest" href="/_assets/siteicons/site.webmanifest" />
 <!-- end bbinclude -->
+<meta name="google-site-verification" content="GbAJj-pdErdq9OXF4fVBYySoBHmnFBPFNClE9wzIWLI" />
 </head>
 <body>
 <!-- #bbinclude "page-header-small.incl" -->
